# mermalaid

./: .appwrite.json  .env.example  .gitignore  AGENTS.md  APPWRITE_SETUP.md  APPWRITE_TROUBLESHOOTING.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v1.1.0.md  SEO_IMPLEMENTATION_SUMMARY.md  SEO_OPTIMIZATION.md  STATIC_HOSTING.md  env.example  github_dario_novoa_io.pub  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: README.md  deploy-appwrite.yml  deploy-github-pages.yml  keep-appwrite-active.yml  release-with-updates.yml  release.yml  test.yml
api/: og.test.ts  og.ts  preview.test.ts  preview.ts  sign.test.ts  sign.ts  tsconfig.json
api/_lib/: env.ts  http.ts  modal.test.ts  (+14 more)
docs/: AGENT_INTEGRATION.md  AUTO_UPDATE_SETUP.md  DEPLOYMENT.md  PRODUCTION_UPDATE_SETUP.md  UPDATE_SETUP_SUMMARY.md
e2e/: deploy-smoke.spec.ts  editor-toolbar.spec.ts  landing-editor.spec.ts  mobile-editor.spec.ts
mcp/: README.md  package-lock.json  package.json  tsconfig.json
public/: CNAME  _redirects  robots.txt  sitemap.xml
scripts/: generate-og-image.py  generate-update-manifest.sh  release.mjs  render-mermaid-sample.mjs  sign-update.sh  slack-install-links.mjs
slack/: README.md  manifest.json
src/: App.css  App.integration.test.tsx  App.tsx  index.css  main.tsx  nativeAppMenu.ts  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+129 files in other folders)
