[package]
name = "mermalaid"
version = "1.3.0"
description = "Mermalaid - A native macOS Mermaid diagram editor"
authors = ["Dario Novoa Vergara"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.2", features = [] }
