[package]
name = "mermalaid"
version = "1.5.8"
description = "Mermalaid - A native macOS Mermaid diagram editor"
authors = ["Dario Novoa Vergara"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.2", features = [] }
url = "2.5"
# Keep major.minor in sync with @tauri-apps/plugin-* in package.json (Tauri CLI checks this).
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-opener = "2.5"
